ifds/src/icfg/tabulation/sparse/snapshots/ifds__icfg__tabulation__sparse__defuse__test__building_conditional_defuse_reg_0_scfg.snap
---
source: src/icfg/tabulation/sparse/defuse.rs
expression: facts

---
[
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 0,
        next_pc: 4,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 0,
        next_pc: 6,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 6,
        next_pc: 7,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 0,
        next_pc: 0,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 0,
        next_pc: 9,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 2,
        next_pc: 9,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 9,
        next_pc: 11,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 4,
        next_pc: 9,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 7,
        next_pc: 9,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 11,
        next_pc: 11,
        track: 1,
        function: "main",
        memory_offset: None,
    },
]
