ifds/src/icfg/tabulation/sparse/snapshots/ifds__icfg__tabulation__sparse__defuse__test__building_defuse_reg_1_scfg.snap
---
source: src/icfg/tabulation/sparse/defuse.rs
expression: facts

---
[
    Fact {
        belongs_to_var: "%1",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 3,
        next_pc: 4,
        track: 2,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%1",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 2,
        next_pc: 3,
        track: 2,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%1",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 1,
        next_pc: 2,
        track: 2,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%1",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 0,
        next_pc: 1,
        track: 2,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%1",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 4,
        next_pc: 4,
        track: 2,
        function: "main",
        memory_offset: None,
    },
]
