ifds/src/icfg/tabulation/sparse/snapshots/ifds__icfg__tabulation__sparse__defuse__test__building_memory_defuse_mem_0_scfg.snap
---
source: src/icfg/tabulation/sparse/defuse.rs
expression: facts

---
[
    Fact {
        belongs_to_var: "mem@0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: true,
        pc: 0,
        next_pc: 1,
        track: 5,
        function: "main",
        memory_offset: Some(
            0,
        ),
    },
    Fact {
        belongs_to_var: "mem@0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: true,
        pc: 1,
        next_pc: 3,
        track: 5,
        function: "main",
        memory_offset: Some(
            0,
        ),
    },
    Fact {
        belongs_to_var: "mem@0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: true,
        pc: 3,
        next_pc: 5,
        track: 5,
        function: "main",
        memory_offset: Some(
            0,
        ),
    },
    Fact {
        belongs_to_var: "mem@0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: true,
        pc: 5,
        next_pc: 5,
        track: 5,
        function: "main",
        memory_offset: Some(
            0,
        ),
    },
]
