ifds/src/icfg/tabulation/sparse/snapshots/ifds__icfg__tabulation__sparse__defuse__test__defuse_reg_0_scfg.snap
---
source: src/icfg/tabulation/sparse/defuse.rs
expression: facts

---
[
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 0,
        next_pc: 5,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 0,
        next_pc: 0,
        track: 1,
        function: "main",
        memory_offset: None,
    },
    Fact {
        belongs_to_var: "%0",
        var_is_global: false,
        var_is_taut: false,
        var_is_memory: false,
        pc: 5,
        next_pc: 5,
        track: 1,
        function: "main",
        memory_offset: None,
    },
]
